@@ -141,5 +141,6 @@ HORAS TRABALHADAS: 8h
 
 - bugfixes
 - inclusao de opcao modo (manual/automatico) no queue
+- inclusao de opcao rodar (play/pause) no queue
 
-HORAS TRABALHADAS: 4h
+HORAS TRABALHADAS: 6h
